--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,7 +10,7 @@
   box-sizing: border-box;
 }
 body {
-  @apply bg-[#040512] text-white;
+  @apply bg-[#040512] text-white font-_inter;
 }
 #root::before {
   @apply content-[''] w-96 h-96 bg-blue-600 fixed rounded-full blur-[200px] -top-12 -left-12;
@@ -16,7 +18,7 @@ body {
 #root::after {
   @apply content-[''] w-96 h-96 bg-purple-600 fixed rounded-full blur-[200px] -bottom-12 -right-12;
 }
-._app_container {
+._app-container {
   @apply w-full min-h-screen backdrop-filter backdrop-blur-md bg-opacity-15;
 }
 
