--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -13,10 +13,10 @@ body {
   @apply bg-[#040512] text-white font-_inter;
 }
 #root::before {
-  @apply content-[''] w-96 h-96 bg-blue-600 fixed rounded-full blur-[200px] -top-12 -left-12;
+  @apply content-[''] w-96 h-96 bg-blue-600 fixed rounded-full blur-[200px] -top-12 -left-12 -z-10;
 }
 #root::after {
-  @apply content-[''] w-96 h-96 bg-purple-600 fixed rounded-full blur-[200px] -bottom-12 -right-12;
+  @apply content-[''] w-96 h-96 bg-purple-600 fixed rounded-full blur-[200px] -bottom-12 -right-12 -z-10;
 }
 ._app-container {
   @apply w-full min-h-screen backdrop-filter backdrop-blur-md bg-opacity-15;
