--- a/Frontend/src/Components/Text-Editor/Tiptap.scss
+++ b/Frontend/src/Components/Text-Editor/Tiptap.scss
@@ -1,11 +1,11 @@
 /* Basic editor styles */
 
-.tiptap, {
+.tiptap {
   @apply border-2 outline-none border-gray-400 px-2 py-4 focus-within:border-blue-500 min-h-20 max-h-[300px] overflow-y-auto rounded-md;
   scrollbar-width: thin;
   scrollbar-color: gray transparent;
 
-  p{
+  p {
     @apply text-justify;
   }
 
@@ -19,7 +19,7 @@
   ul,
   ol {
     padding: 0 1rem;
-    margin: 1.25rem 1rem 1.25rem 0.4rem;
+    margin: 1rem 1rem 1rem 0.4rem;
 
     li p {
       margin-top: 0.25em;
@@ -109,6 +109,16 @@
     box-decoration-break: clone;
     padding: 0.1rem 0.3rem;
   }
+
+    /* Placeholder (at the top) */
+    p.is-editor-empty:first-child::before {
+      color: #6b7280;
+      content: attr(data-placeholder);
+      float: left;
+      height: 0;
+      pointer-events: none;
+    }
+
 }
 
 ._button-group {
