--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -22,6 +22,11 @@ body {
   @apply w-full min-h-screen backdrop-filter backdrop-blur-md bg-opacity-15;
 }
 
+._scrollbar-CSS {
+  scrollbar-width: thin;
+  scrollbar-color: gray transparent;
+}
+
 /* this one overrides the tailwind classes */
 /* @layer utilities{
 
